# runtrack_cpp

./: CMakeLists.txt
Day1/Job1/: HelloWorld.cpp  HelloWorld.h
Day1/Job10/: PointerOfListOfPointers.cpp  PointerOfListOfPointers.h
Day1/Job11/: SwapValuesReferences.cpp  SwapValuesReferences.h
Day1/Job12/: DoubleArray.cpp  DoubleArray.h
Day1/Job13/: Fibonacci.cpp  Fibonacci.h
Day1/Job14/: Cube.cpp  Cube.h
Day1/Job15/: EvenBits.cpp  EvenBits.h
Day1/Job16/: MySortString.cpp  MySortString.h
Day1/Job17/: SchoolManager.cpp  SchoolManager.h
Day1/Job18/: Table.cpp  Table.h
Day1/Job2/: Product.cpp  Product.h
Day1/Job3/: Input.cpp  Input.h
Day1/Job4/: EvenNotEven.cpp  EvenNotEven.h
Day1/Job5/: SwitchInt.cpp  SwitchInt.h
Day1/Job6/: ShopKeeper.cpp  ShopKeeper.h
Day1/Job7/: ReverseNumber.cpp  ReverseNumber.h
Day1/Job8/: LeapYear.cpp  LeapYear.h
Day1/Job9/: PointersList.cpp  PointersList.h
Day2/Job1/Aquatic/: Aquatic.h
Day2/Job1/Penguin/: Penguin.cpp  Penguin.h
Day2/Job1/Terrestrial/: Terrestrial.h
Day2/Job10/Penguin/: Penguin.cpp  Penguin.hpp
Day2/Job11/Penguin/: Penguin.cpp  Penguin.hpp
Day2/Job12/Penguin/: Penguin.cpp  Penguin.hpp
Day2/Job2/Aquatic/: Aquatic.cpp  Aquatic.h
Day2/Job2/Penguin/: Penguin.cpp  Penguin.h
Day2/Job2/Terrestrial/: Terrestrial.cpp  Terrestrial.h
Day2/Job3/Aquatic/: Aquatic.hpp
Day2/Job3/Penguin/: Penguin.cpp  Penguin.hpp
Day4/Job1/: Max.cpp  Max.h++
Day4/Job2/: Box.cpp  Box.h++
Day4/Job3/: Box.cpp  Box.h++
Day4/Job4/: Shape.cpp  Shape.h++
Day4/Job5/: ShapeFactory.cpp  ShapeFactory.h++
Day4/Job6/: ShapeFactory.cpp  ShapeFactory.h++
Day4/Job7/: Print.cpp  Print.h++
(+85 files in other folders)
